--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328new]
+[env:megaatmega2560]
 platform = atmelavr
-board = nanoatmega328new
+board = megaatmega2560
 framework = arduino
+board_build.mcu = atmega2560
+board_build.f_cpu = 16000000L
